--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -1,11 +1,16 @@
 html{
-    background-color: #30312C;
+    background-color: #121212;
     font-size: 10px;
 }
 body {
     max-width: 500px;
     max-height: 1000px;
     border-radius: 5px;
+    background-color: #121212;
+}
+
+ion-header{ 
+    background-color: #121212;
 }
 
 .btn-wrapper {
@@ -22,4 +27,21 @@ body {
 .button {
     position: relative;
     text-align: center;
+}
+
+.divider-horizontal{
+    margin: 1rem;
+    height: 1px;
+    background-color: var(--ion-color-light);
+}
+
+.divider-vertical {
+    margin: 1rem;
+    height:100%;
+    width: 1px;
+    background-color: var(--ion-color-light);    
+}
+
+ion-footer{
+    background-color: #121212;
 }
