--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 html{
     background-color: #121212;
     font-size: 10px;
@@ -30,18 +34,19 @@ ion-header{
 }
 
 .divider-horizontal{
-    margin: 1rem;
+    margin: 1rem 0;
     height: 1px;
-    background-color: var(--ion-color-light);
+    background-color: var(--color-light);
 }
 
 .divider-vertical {
     margin: 1rem;
     height:100%;
     width: 1px;
-    background-color: var(--ion-color-light);    
+    background-color: var(--color-light);    
 }
 
 ion-footer{
     background-color: #121212;
+    padding: 0 1rem;
 }
